--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,11 +1,16 @@
-<%= simple_form_for(@classroom) do |f| %>
+<%= simple_form_for(@classroom,
+                    defaults: { input_html: { :class => "form-control" } },
+                    wrapper: :vertical_input_group,
+                    wrapper_mappings: {
+                      check_boxes: :horizontal_radio_and_checkboxes,
+                      radio_buttons: :horizontal_radio_and_checkboxes,
+                      file: :horizontal_file_input,
+                      boolean: :horizontal_boolean
+                    }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.association :student %>
-    <%= f.association :course %>
-    <%= f.input :entry_at %>
-  </div>
+  <%= f.association :student %>
+  <%= f.association :course %>
 
   <div class="form-actions">
     <%= f.button :submit %>
