--- a/app/views/classrooms/edit.html.erb
+++ b/app/views/classrooms/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing classroom</h1>
+<h1>Editar classe</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @classroom %> |
-<%= link_to 'Back', classrooms_path %>
