--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing courses</h1>
+<h1><%= tmp Course %></h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Status</th>
+      <th><%= ta Course, :name %></th>
+      <th><%= ta Course, :description %></th>
+      <th><%= ta Course, :status %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,9 @@
       <tr>
         <td><%= course.name %></td>
         <td><%= course.description %></td>
-        <td><%= course.status %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= status_label course.status %></td>
+        <td><%= link_to 'Editar', edit_course_path(course) %></td>
+        <td><%= link_to 'Excluir', course, method: :delete, data: { confirm: 'Confirma?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Course', new_course_path %>
+<%= link_to 'Novo curso', new_course_path, class: 'btn btn-default' %>
