--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing students</h1>
+<h1><%= tmp Student %></h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Register number</th>
-      <th>Status</th>
+      <th><%= ta Student, :name %></th>
+      <th><%= ta Student, :register_number %></th>
+      <th><%= ta Student, :status %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +15,9 @@
       <tr>
         <td><%= student.name %></td>
         <td><%= student.register_number %></td>
-        <td><%= student.status %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= status_label student.status %></td>
+        <td><%= link_to 'Editar', edit_student_path(student) %></td>
+        <td><%= link_to 'Excluir', student, method: :delete, data: { confirm: 'Confirma?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Student', new_student_path %>
+<%= link_to 'Novo estudante', new_student_path, class: 'btn btn-default' %>
